fix: filter gap

--- a/assets/styling/main.sass
+++ b/assets/styling/main.sass
@@ -204,7 +204,7 @@ section
   &-Filter
     position: sticky
     z-index: 999
-    top: calc(2rem + 1.59rem)
+    top: calc(2rem + 1.58rem)
     left: 0
     right: 0
     border-top: 1px solid currentColor
